--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-redux": "^7.1.25",
     "@types/uuid": "^9.0.0",
+    "axios": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.57.1",
     "typescript": "^4.4.2",
     "uuid": "^9.0.0",
