--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/redux-form": "^8.3.5",
     "@types/uuid": "^9.0.0",
     "axios": "^1.2.2",
+    "emailjs": "^4.0.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
